use asymmetric security keys, user information fix

--- a/src/Logn/appsettings.Development.json
+++ b/src/Logn/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "Logn": {
-    "Authority": "http://localhost:5114"
+    "Authority": "https://localhost:7269"
   },
   "Logging": {
     "LogLevel": {
